# EVA4-Phase2

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  EVA4_S2_mobilnet_v2_transfer_learning_v4b3.ipynb  README.md  landmark.py  pyproject.toml
.github/workflows/: main.yml
Modules/: __init__.py  data_loader.py  find_mean_stddev.py  test_train_csvGen.py  train.py  utils.py  visualization.py
S1_aws_lambda_mobilenet_v2/: README.md  download_pretrained_model.py  handler.py  package-lock.json  package.json
S2_mobilenet_v2_custom_dataset/: EVA4_S2_mobilnet_v2_transfer_learning.ipynb  EVA4_S2_mobilnet_v2_transfer_learning_v2.ipynb  EVA4_S2_mobilnet_v2_transfer_learning_v3.ipynb  EVA4_S2_mobilnet_v2_transfer_learning_v4.ipynb  EVA4_S2_mobilnet_v2_transfer_learning_v4a.ipynb  EVA4_S2_mobilnet_v2_transfer_learning_v4b.ipynb  README.md  dataset.py
S2_mobilenet_v2_custom_dataset/Deployment-mobilenetv2-custom-trained/: handler.py  package-lock.json  package.json  serverless.yml
S2_mobilenet_v2_custom_dataset/Training/: EVA4_S2_mobilnet_v2_transfer_learning.ipynb  EVA4_S2_mobilnet_v2_transfer_learning_v1.ipynb  EVA4_S2_mobilnet_v2_transfer_learning_v4b.ipynb  EVA4_S2_mobilnet_v2_transfer_learning_v4b2.ipynb  (+5 more)
S3_FaceAlignment/: EVA4_S3_face_alignment_and_swap.ipynb  Facealignment.py  README.md  deploymentFile.py  faceblendcommon.py  fbc.py  trail.ipynb  trail2.ipynb  trail3.ipynb
S7_Variational_AutoEncoders/: VAE.ipynb  VariationalAutoEncoder.ipynb
frontend/: pelicanconf.py  tasks.py
week3/: handler.py  package.json  requirements.txt  serverless.yml
(+16 files in other folders)
